## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libgcl.a
#DEVMODE_CXX = -Wall -g2 -O0
CTAGSFLAGS = --c-kinds=* --fields=+iaSmKz --extra=+q --language-force=C++

libgcl_a_CFLAGS  = $(SOLCHEMPRO_CFLAGS)  

libgcl_a_SOURCES = \
	gcl_compound.c \
	gcl_compound.h \
	$(NULL)

